replace tumblr with wiki

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				  <h1>Hire Casey.</h1>
 				  <p>📅 &nbsp;I'm currently taking on new projects for <strong>summer</strong> <span class="emoji">🌞</span> <strong>and fall</strong> <span class="emoji">🍃</span> <strong>2017</strong>.</p>
 				  <p><a class="btn btn-primary btn-lg" href="mailto:casey@bullshit.systems" role="button"><i class="fa fa-envelope"></i> &nbsp;&nbsp;Email casey@bullshit.systems</a></p>
-				  <p><a class="btn-lg" href="http://github.com/caseyg"><i class="fa fa-github"></i></a> <a class="btn-lg" href="http://twitter.com/caseyg"><i class="fa fa-twitter"></i></a> <a class="btn-lg" href="http://notes.caseyagollan.com"><i class="fa fa-tumblr"></i></a></p>
+				  <p><a class="btn-lg" href="http://github.com/caseyg"><i class="fa fa-github"></i></a> <a class="btn-lg" href="http://twitter.com/caseyg"><i class="fa fa-twitter"></i></a> <a class="btn-lg" href="http://cag.wiki"><i class="fa fa-globe"></i></a></p>
 				</div>
 			</div>
 			<div class="row">
