update links at the bottom

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ and management. Enthusiasm about teaching and learning. Press relations.</p>
 					<h2>Thanks for reading! Hope to work together.</h2>
 					<br> <br>
 					<p><a class="btn btn-primary btn-lg" href="mailto:casey@bullshit.systems" role="button"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Email casey@bullshit.systems</a></p>
-				  <p><a class="btn-lg" href="http://github.com/caseyg"><i class="fa fa-github"></i></a> <a class="btn-lg" href="http://twitter.com/caseyg"><i class="fa fa-twitter"></i></a> <a class="btn-lg" href="http://notes.caseyagollan.com"><i class="fa fa-tumblr"></i></a></p>
+					<p><a class="btn-lg" href="http://github.com/caseyg"><i class="fa fa-github"></i></a> <a class="btn-lg" href="http://twitter.com/caseyg"><i class="fa fa-twitter"></i></a> <a class="btn-lg" href="http://cag.wiki"><i class="fa fa-globe"></i></a></p>
 					<br>
 				</div>
 			</div>
