add new projects and hide old ones

--- a/index.html
+++ b/index.html
@@ -85,6 +85,53 @@
 			<div class="row grid first">
 				<div class="col-md-3">
 					<div class="thumbnail">
+						<a href=""><img src="sarahendren.png" width="400" height="267" alt="..."></a>
+						<div class="caption">
+							<h3><a href="">Sara Hendren</a></h3>
+							<p></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="thumbnail">
+						<a href=""><img src="aes.png" width="400" height="267" alt="..."></a>
+						<div class="caption">
+							<h3><a href="">American Ethnological Society</a></h3>
+							<p></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="thumbnail">
+						<a href=""><img src="aplusa.png" width="400" height="267" alt="..."></a>
+						<div class="caption">
+							<h3><a href="">Adaptation + Ability Group</a></h3>
+							<p></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="thumbnail">
+						<a href=""><img src="inglettgallery.png" width="400" height="267" alt="..."></a>
+						<div class="caption">
+							<h3><a href="">Susan Inglett Gallery</a></h3>
+							<p></p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row grid">
+				<div class="col-md-3">
+					<div class="thumbnail">
+						<a href=""><img src="brianfunck.png" width="400" height="267" alt="..."></a>
+						<div class="caption">
+							<h3><a href="">Brian Funck</a></h3>
+							<p></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="thumbnail">
 						<a href="http://accessibleicon.org"><img src="accessibleicon.png" width="400" height="267" alt="..."></a>
 						<div class="caption">
 							<h3><a href="http://accessibleicon.org">Accessible Icon Project</a></h3>
@@ -101,6 +148,7 @@
 						</div>
 					</div>
 				</div>
+<!--
 				<div class="col-md-3">
 					<div class="thumbnail">
 					<a href="http://recessnewyork.com"><img src="recess.png" width="400" height="267" alt="..."></a>
@@ -110,6 +158,7 @@
 						</div>
 					</div>
 				</div>
+-->
 				<div class="col-md-3">
 					<div class="thumbnail">
 						<a href="http://multientry.com"><img src="multientry.png" width="400" height="267" alt="..."></a>
@@ -121,6 +170,7 @@
 				</div>
 			</div>
 			<div class="row grid">
+<!--
 				<div class="col-md-3">
 					<div class="thumbnail">
 						<a href="http://opengovfoundation.org"><img src="opengov.png" width="400" height="267" alt="..."></a>
@@ -130,6 +180,8 @@
 						</div>
 					</div>
 				</div>
+-->
+<!--
 				<div class="col-md-3">
 					<div class="thumbnail">
 						<a href="http://freecooperunion.org/disorientation/home/"><img src="disorientation.png" width="400" height="267" alt="..."></a>
@@ -139,6 +191,7 @@
 						</div>
 					</div>
 				</div>
+-->
 				<div class="col-md-3">
 					<div class="thumbnail">
 					<a href="http://sfpc.io"><img src="sfpc.png" width="400" height="267" alt="..."></a>
@@ -157,8 +210,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="row">
+<!--
 				<div class="col-md-3">
 					<div class="thumbnail">
 						<a href="http://rodigallery.com"><img src="rodigallery.png" width="400" height="267" alt="..."></a>
@@ -168,6 +220,7 @@
 						</div>
 					</div>
 				</div>
+-->
 				<div class="col-md-3">
 					<div class="thumbnail">
 						<a href="http://www.tomhealy.us"><img src="tomhealy.png" width="400" height="267" alt="..."></a>
@@ -177,6 +230,7 @@
 						</div>
 					</div>
 				</div>
+<!--
 				<div class="col-md-3">
 					<div class="thumbnail">
 						<a href="http://pooool.info"><img src="pool.png" width="400" height="267" alt="..."></a>
@@ -186,7 +240,9 @@
 						</div>
 					</div>
 				</div>
-			<!--<div class="col-md-3">
+-->
+<!--
+				<div class="col-md-3">
 					<div class="thumbnail">
 						<a href="http://girlwalkallday.com"><img src="girlwalk.png" width="400" height="267" alt="..."></a>
 						<div class="caption">
@@ -194,8 +250,10 @@
 							<p>Designed and developed a website for a serially-released film project going on a national tour after breaking $20,000 on Kickstarter.</p>
 						</div>
 					</div>
-				</div>-->
+				</div>
+-->
 			</div>
+<!--
 			<div class="row">
 				<hr>
 				<h2 class="col-md-12">Actually, let's do everything.</h2>
@@ -225,6 +283,7 @@ and management. Enthusiasm about teaching and learning. Press relations.</p>
 </p>
 				</div>
 			</div>
+-->
 			<div class="row">
 				<hr>
 				<div class="jumbotron col-sm-12">
