--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			<div class="row grid first">
 				<div class="col-md-3">
 					<div class="thumbnail">
-						<a href=""><img src="sarahendren.png" width="400" height="267" alt="..."></a>
+						<a href=""><img src="img/sarahendren.png" width="400" height="267" alt="..."></a>
 						<div class="caption">
 							<h3><a href="">Sara Hendren</a></h3>
 							<p></p>
@@ -94,7 +94,7 @@
 				</div>
 				<div class="col-md-3">
 					<div class="thumbnail">
-						<a href=""><img src="aes.png" width="400" height="267" alt="..."></a>
+						<a href=""><img src="img/aes.png" width="400" height="267" alt="..."></a>
 						<div class="caption">
 							<h3><a href="">American Ethnological Society</a></h3>
 							<p></p>
@@ -103,7 +103,7 @@
 				</div>
 				<div class="col-md-3">
 					<div class="thumbnail">
-						<a href=""><img src="aplusa.png" width="400" height="267" alt="..."></a>
+						<a href=""><img src="img/aplusa.png" width="400" height="267" alt="..."></a>
 						<div class="caption">
 							<h3><a href="">Adaptation + Ability Group</a></h3>
 							<p></p>
@@ -112,7 +112,7 @@
 				</div>
 				<div class="col-md-3">
 					<div class="thumbnail">
-						<a href=""><img src="inglettgallery.png" width="400" height="267" alt="..."></a>
+						<a href=""><img src="img/inglettgallery.png" width="400" height="267" alt="..."></a>
 						<div class="caption">
 							<h3><a href="">Susan Inglett Gallery</a></h3>
 							<p></p>
@@ -123,7 +123,7 @@
 			<div class="row grid">
 				<div class="col-md-3">
 					<div class="thumbnail">
-						<a href=""><img src="brianfunck.png" width="400" height="267" alt="..."></a>
+						<a href=""><img src="img/brianfunck.png" width="400" height="267" alt="..."></a>
 						<div class="caption">
 							<h3><a href="">Brian Funck</a></h3>
 							<p></p>
@@ -132,7 +132,7 @@
 				</div>
 				<div class="col-md-3">
 					<div class="thumbnail">
-						<a href="http://accessibleicon.org"><img src="accessibleicon.png" width="400" height="267" alt="..."></a>
+						<a href="http://accessibleicon.org"><img src="img/accessibleicon.png" width="400" height="267" alt="..."></a>
 						<div class="caption">
 							<h3><a href="http://accessibleicon.org">Accessible Icon Project</a></h3>
 							<p>In collaboration with Sara Hendren, redesigned the website of this widely-known design intervention, distilling it to a single page and foregrounding the project's story and manifesto.</p>
@@ -141,7 +141,7 @@
 				</div>
 				<div class="col-md-3">
 					<div class="thumbnail">
-						<a href="http://engineeringathome.org"><img src="engineeringathome.png" width="400" height="267" alt="..."></a>
+						<a href="http://engineeringathome.org"><img src="img/engineeringathome.png" width="400" height="267" alt="..."></a>
 						<div class="caption">
 							<h3><a href="http://engineeringathome.org">Engineering at Home</a></h3>
 							<p>A 6-month long collaboration with anthropologist Caitrin Lynch and designer Sara Hendren, of Olin College, to produce an interactive archive that frames their academic research for a broad internet readership.</p>
@@ -151,7 +151,7 @@
 <!--
 				<div class="col-md-3">
 					<div class="thumbnail">
-					<a href="http://recessnewyork.com"><img src="recess.png" width="400" height="267" alt="..."></a>
+					<a href="http://recessnewyork.com"><img src="img/recess.png" width="400" height="267" alt="..."></a>
 						<div class="caption">
 							<h3><a href="http://recessnewyork.com">Recess New York</a></h3>
 							<p>Working from pre-existing mockups, developed a responsive website for Khairi Mdnor's multi-faceted cultural production practice. Implemented a backend that makes it easy to maintain events, projects, and mixtapes.</p>
@@ -161,7 +161,7 @@
 -->
 				<div class="col-md-3">
 					<div class="thumbnail">
-						<a href="http://multientry.com"><img src="multientry.png" width="400" height="267" alt="..."></a>
+						<a href="http://multientry.com"><img src="img/multientry.png" width="400" height="267" alt="..."></a>
 						<div class="caption">
 							<h3><a href="http://multientry.com">Multi Entry</a></h3>
 							<p>Pair-programmed with ethnographer Christina Xu, walking her through setting up her own site to document research into China's creative culture. Answered questions and solved problems together as they arose.</p>
@@ -173,7 +173,7 @@
 <!--
 				<div class="col-md-3">
 					<div class="thumbnail">
-						<a href="http://opengovfoundation.org"><img src="opengov.png" width="400" height="267" alt="..."></a>
+						<a href="http://opengovfoundation.org"><img src="img/opengov.png" width="400" height="267" alt="..."></a>
 						<div class="caption">
 							<h3><a href="http://opengovfoundation.org">OpenGov Foundation</a></h3>
 							<p>For a D.C.-based non-profit, developed a Wordpress theme from a set of mockups. Collaborated with staff using Github.</p>
@@ -184,7 +184,7 @@
 <!--
 				<div class="col-md-3">
 					<div class="thumbnail">
-						<a href="http://freecooperunion.org/disorientation/home/"><img src="disorientation.png" width="400" height="267" alt="..."></a>
+						<a href="http://freecooperunion.org/disorientation/home/"><img src="img/disorientation.png" width="400" height="267" alt="..."></a>
 						<div class="caption">
 							<h3><a href="http://freecooperunion.org/disorientation/home/">Disorientation Reader</a></h3>
 							<p>Adapted a 132 page print publication to web, building out a Jekyll-powered website, and enhancing many sections with interactivity.</p>
@@ -194,7 +194,7 @@
 -->
 				<div class="col-md-3">
 					<div class="thumbnail">
-					<a href="http://sfpc.io"><img src="sfpc.png" width="400" height="267" alt="..."></a>
+					<a href="http://sfpc.io"><img src="img/sfpc.png" width="400" height="267" alt="..."></a>
 						<div class="caption">
 							<h3><a href="http://sfpc.io">School for Poetic Computation</a></h3>
 							<p>Designed and developed the website for an independent art and technology school (where I also served as administrator). Built on Github and Jekyll, it's collaboratively maintained by faculty, staff, and students.</p>
@@ -203,7 +203,7 @@
 				</div>
 				<div class="col-md-3">
 					<div class="thumbnail">
-						<a href="http://marshelal.com"><img src="marshelal.png" width="400" height="267" alt="..."></a>
+						<a href="http://marshelal.com"><img src="img/marshelal.png" width="400" height="267" alt="..."></a>
 						<div class="caption">
 							<h3><a href="http://marshelal.com">Marwa Helal</a></h3>
 							<p>Designed and developed a website for New York-based writer Marwa Helal, migrating from Wordpress to Siteleaf, and extracting a backlog of content from PDFs.</p>
@@ -213,7 +213,7 @@
 <!--
 				<div class="col-md-3">
 					<div class="thumbnail">
-						<a href="http://rodigallery.com"><img src="rodigallery.png" width="400" height="267" alt="..."></a>
+						<a href="http://rodigallery.com"><img src="img/rodigallery.png" width="400" height="267" alt="..."></a>
 						<div class="caption">
 							<h3><a href="http://rodigallery.com">Rodi Gallery</a></h3>
 							<p>Designed and developed a website for a traveling art gallery in a retrofitted truck, featuring a map-based interface.</p>
@@ -223,7 +223,7 @@
 -->
 				<div class="col-md-3">
 					<div class="thumbnail">
-						<a href="http://www.tomhealy.us"><img src="tomhealy.png" width="400" height="267" alt="..."></a>
+						<a href="http://www.tomhealy.us"><img src="img/tomhealy.png" width="400" height="267" alt="..."></a>
 						<div class="caption">
 							<h3><a href="http://www.tomhealy.us">Tom Healy</a></h3>
 							<p>Designed and developed a website for a writer and public speaker, featuring a custom taxonomy of writing.</p>
@@ -233,7 +233,7 @@
 <!--
 				<div class="col-md-3">
 					<div class="thumbnail">
-						<a href="http://pooool.info"><img src="pool.png" width="400" height="267" alt="..."></a>
+						<a href="http://pooool.info"><img src="img/pool.png" width="400" height="267" alt="..."></a>
 						<div class="caption">
 							<h3><a href="http://pooool.info">Poooool</a></h3>
 							<p>Translated art direction into a Wordpress theme for Pool, an online arts journal.</p>
@@ -244,7 +244,7 @@
 <!--
 				<div class="col-md-3">
 					<div class="thumbnail">
-						<a href="http://girlwalkallday.com"><img src="girlwalk.png" width="400" height="267" alt="..."></a>
+						<a href="http://girlwalkallday.com"><img src="img/girlwalk.png" width="400" height="267" alt="..."></a>
 						<div class="caption">
 							<h3><a href="http://girlwalkallday.com">Girl Walk // All Day</a></h3>
 							<p>Designed and developed a website for a serially-released film project going on a national tour after breaking $20,000 on Kickstarter.</p>
